<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CheckoutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/checkout"
        app:navigationIcon="@drawable/baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Personal Details"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="First name" />
                    <EditText
                        android:layout_marginTop="8dp"
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Last name" />

                    <EditText
                        android:id="@+id/etMobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Mobile No." />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/email" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!--            shipping details-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shippingDetails"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="House No." />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Street Name" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="City" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Postal Code" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!--            payment details-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentDetails"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/rgPaymentMode"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbPOD"
                            android:text="@string/payOnDelivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <RadioButton
                            android:id="@+id/rbDebit"
                            android:checked="true"
                            android:text="@string/creditOrDebit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RadioGroup>

                    <LinearLayout

                        android:id="@+id/layoutCard"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">




                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Card holder name" />

                        <EditText
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="Credit or Debit no" />

                        <EditText
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="CVV" />

                        <EditText
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="Expire Date" />

                    </LinearLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:maxWidth="300dp"
                android:text="@string/placeOrder" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
